<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.about.AboutFragment">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/yellow_light"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/library_me"
                android:textSize="24sp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="17dp"
                android:fontFamily="@font/koulen_regular" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_book_app_with_stroke"
                android:contentDescription="@string/logo_aplikasi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_aplikasi_about"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginHorizontal="20dp"
                android:textAlignment="center"
                android:textSize="14sp"
                android:layout_marginVertical="20dp"
                tools:ignore="VisualLintLongText" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_tertanda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="14sp"
            android:text="@string/tertanda"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout" />

        <TextView
            android:id="@+id/tv_wahyu_rahayu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="14sp"
            android:text="@string/wahyu_rahayu"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginBottom="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_tertanda" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
